results/logs/error_log/task_BigCodeBench_1026_error.log
refcode测试失败，BigCodeBench/1026的依赖{'matplotlib': '3.10.0', 'numpy': '2.2.1', 'python': '3.12', 'scipy': '1.15.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_3_0.py", line 35
    </end>
    ^
SyntaxError: invalid syntax

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.

refcode测试失败，BigCodeBench/1026的依赖{'matplotlib': '3.10.0', 'numpy': '2.2.1', 'python': '3.12', 'scipy': '1.15.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_3_0.py", line 40
    </end>
    ^
SyntaxError: invalid syntax

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.

refcode测试失败，BigCodeBench/1026的依赖{'matplotlib': '3.10.0', 'numpy': '2.2.1', 'python': '3.12', 'scipy': '1.15.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_3_0.py", line 39
    </end>
    ^
SyntaxError: invalid syntax

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/matplotlib3.10.0_numpy2.2.1_python3.12_scipy1.15.1/bin/python', '-m', 'unittest', 'test_3_0.py']' returned non-zero exit status 1.

